--- a/interactive-spider.html
+++ b/interactive-spider.html
@@ -4,7 +4,7 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="interactive spider.css">
+      <link rel="stylesheet" href="interactive-spider.css">
       <title>Interactive spider</title>
   </head>
 
@@ -12,7 +12,7 @@
     <!-- visit my tiktok("Meowish") for more code -->
       <canvas id="canvas"></canvas>
 
-    <script src="interactive spider.js"></script>
+    <script src="interactive-spider.js"></script>
   </body>
 
 </html>
